# Generated by Django 6.0.5 on 2026-06-10 22:12

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Carrera',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=200)),
                ('codigo', models.CharField(max_length=20, unique=True)),
            ],
            options={
                'verbose_name': 'Carrera',
                'verbose_name_plural': 'Carreras',
                'ordering': ['nombre'],
            },
        ),
        migrations.CreateModel(
            name='Espacio',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=150, unique=True)),
                ('tipo', models.CharField(choices=[('aula', 'Aula'), ('laboratorio', 'Laboratorio'), ('oficina', 'Oficina'), ('departamento', 'Departamento')], max_length=50)),
                ('piso', models.SmallIntegerField()),
                ('capacidad', models.PositiveIntegerField(blank=True, null=True)),
            ],
            options={
                'verbose_name': 'Espacio',
                'verbose_name_plural': 'Espacios',
                'ordering': ['piso', 'nombre'],
            },
        ),
        migrations.CreateModel(
            name='Materia',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=200)),
                ('codigo', models.CharField(max_length=20, unique=True)),
                ('profesores', models.TextField(blank=True)),
            ],
            options={
                'verbose_name': 'Materia',
                'verbose_name_plural': 'Materias',
                'ordering': ['nombre'],
            },
        ),
        migrations.CreateModel(
            name='Noticias',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('titulo', models.CharField(max_length=200)),
                ('contenido', models.TextField()),
                ('fecha_publicacion', models.DateTimeField()),
                ('fecha_expiracion', models.DateTimeField(blank=True, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'verbose_name': 'Noticia',
                'verbose_name_plural': 'Noticias',
                'ordering': ['-fecha_publicacion'],
            },
        ),
        migrations.CreateModel(
            name='ActividadExtra',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('titulo', models.CharField(max_length=200)),
                ('tipo', models.CharField(choices=[('taller', 'Taller'), ('curso', 'Curso'), ('evento', 'Evento'), ('charla', 'Charla')], max_length=50)),
                ('descripcion', models.TextField(blank=True)),
                ('fecha_hora_inicio', models.DateTimeField()),
                ('fecha_hora_fin', models.DateTimeField()),
                ('espacio', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='actividades_extra', to='api.espacio')),
            ],
            options={
                'verbose_name': 'Actividad extra',
                'verbose_name_plural': 'Actividades extra',
                'ordering': ['fecha_hora_inicio'],
            },
        ),
        migrations.CreateModel(
            name='HorarioCursado',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('dia_semana', models.CharField(choices=[('lunes', 'Lunes'), ('martes', 'Martes'), ('miercoles', 'Miércoles'), ('jueves', 'Jueves'), ('viernes', 'Viernes'), ('sabado', 'Sábado')], max_length=15)),
                ('comision', models.CharField(max_length=50)),
                ('hora_inicio', models.TimeField()),
                ('hora_fin', models.TimeField()),
                ('fecha_inicio_vigencia', models.DateField()),
                ('fecha_fin_vigencia', models.DateField()),
                ('activo', models.BooleanField(default=True)),
                ('espacio', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='horarios', to='api.espacio')),
                ('materia', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='horarios', to='api.materia')),
            ],
            options={
                'verbose_name': 'Horario de cursado',
                'verbose_name_plural': 'Horarios de cursado',
                'ordering': ['materia', 'dia_semana', 'hora_inicio'],
            },
        ),
        migrations.CreateModel(
            name='MesaExamen',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_hora', models.DateTimeField()),
                ('turno', models.CharField(choices=[('febrero', 'Febrero'), ('julio', 'Julio'), ('diciembre', 'Diciembre')], max_length=15)),
                ('llamado', models.PositiveSmallIntegerField()),
                ('tribunal', models.TextField(blank=True)),
                ('activo', models.BooleanField(default=True)),
                ('espacio', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='mesas_examen', to='api.espacio')),
                ('materia', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='mesas_examen', to='api.materia')),
            ],
            options={
                'verbose_name': 'Mesa de examen',
                'verbose_name_plural': 'Mesas de examen',
                'ordering': ['fecha_hora'],
            },
        ),
        migrations.CreateModel(
            name='Suspension',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha', models.DateField()),
                ('motivo', models.CharField(max_length=300)),
                ('tipo', models.CharField(choices=[('paro', 'Paro'), ('inasistencia', 'Inasistencia'), ('feriado', 'Feriado')], max_length=50)),
                ('creado_en', models.DateTimeField(auto_now_add=True)),
                ('actividad_extra', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='suspensiones', to='api.actividadextra')),
                ('horario_cursado', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='suspensiones', to='api.horariocursado')),
            ],
            options={
                'verbose_name': 'Suspensión',
                'verbose_name_plural': 'Suspensiones',
                'ordering': ['-fecha'],
            },
        ),
        migrations.CreateModel(
            name='Totem',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=150)),
                ('activo', models.BooleanField(default=True)),
                ('config_pantalla', models.JSONField(default=dict)),
                ('creado_en', models.DateTimeField(auto_now_add=True)),
                ('espacio', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='totems', to='api.espacio')),
            ],
            options={
                'verbose_name': 'Tótem',
                'verbose_name_plural': 'Tótems',
                'ordering': ['nombre'],
            },
        ),
        migrations.CreateModel(
            name='CarreraMateria',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('anio_plan', models.PositiveSmallIntegerField()),
                ('cuatrimestre', models.PositiveSmallIntegerField()),
                ('carrera', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='materias', to='api.carrera')),
                ('materia', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='carreras', to='api.materia')),
            ],
            options={
                'verbose_name': 'Carrera - Materia',
                'verbose_name_plural': 'Carreras - Materias',
                'ordering': ['carrera', 'anio_plan', 'cuatrimestre'],
                'unique_together': {('carrera', 'materia', 'anio_plan', 'cuatrimestre')},
            },
        ),
    ]
